--- a/src/classes/SampleClass.cls
+++ b/src/classes/SampleClass.cls
@@ -1,3 +1,6 @@
 public with sharing class SampleClass {
-    
+    @AuraEnabled
+    public static List<Account> getAccountData() {        
+        return [SELECT account.name, (SELECT contact.name FROM account.contacts) FROM account];
+    }
 }
